--- a/app/components/about/aboutstyle.css
+++ b/app/components/about/aboutstyle.css
@@ -52,6 +52,20 @@ p {
   border: 5px solid rgb(175, 50, 250);
 }
 
+.carousel-container {
+  max-width: 600px;
+  margin: 20px auto;
+}
+
+.imageContainer img {
+  width: 100%;
+  max-height: 800px;
+  object-fit: contain;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+
 /* Timeline Structure */
 .timeline {
   position: relative;
